Improve performance (#3)
Reduce parse-file processing time with annual file from ~6 to ~1 second
according to Criterium by replacing pmap with map (thread overhead
wasn't worth it) and replacing bigdecimal coercion by float coercion.