@@ -9,4 +9,7 @@
   :dependencies [[org.clojure/clojure "1.10.1"]
                  [org.clojure/tools.cli "1.0.194"]
                  [org.clojure/data.json "1.0.0"]]
+  :profiles {:dev {:dependencies [[criterium "0.4.6"]
+                                  [com.taoensso/tufte "2.2.0"]]}}
+  :jvm-opts ["-Xverify:none"]
   :repl-options {:init-ns b3-cotahist.core})
